build/source/actors/global/fortran_dataTypes.h

    void  set_data_var_i8length(void* handle, const long int* array, int num_row, const int* num_col, int num_elements);
    void  get_size_var_i8length(void* handle, int* num_var);
    void  get_size_data_var_i8length(void* handle, int* num_var, int* num_dat);
    void  get_data_var_i8length(void* handle, long int* array);
    // var_dlength
    void* new_handle_var_dlength();
    void  delete_handle_var_dlength(void* handle);
    void  set_data_var_dlength(void* handle, const double* array, int num_row, const int* num_col, int num_elements);
    void  get_size_var_dlength(void* handle, int* num_var);
    void  get_size_data_var_dlength(void* handle, int* num_var, int* num_dat);
    void  get_data_var_dlength(void* handle, double* array);
    // var_dlength_array
    void* new_handle_dlength_array();
    void  delete_handle_dlength_array(void* handle);
    // file_info
    void* new_handle_file_info();
    void delete_handle_file_info(void* handle);