build/source/actors/global/cppwrap_datatypes.f90


!-----------------------------------
subroutine set_data_var_i8length(handle, array, num_row, num_col, num_elements) bind(C, name='set_data_var_i8length')
  
  type(c_ptr), intent(in), value    :: handle
  integer(c_int), intent(in), value :: num_row
  integer(c_int), intent(in), value :: num_elements
  integer(c_int), intent(in)        :: num_col(num_row) 
  integer(c_long), intent(in)       :: array(num_elements)
  type(var_i8length), pointer :: p
  integer(c_int)  :: i,j,sum_elem
  
  
  call c_f_pointer(handle, p)    
  if (allocated(p%var)) then
    if (size(p%var) /= num_row) then
      deallocate(p%var)
      allocate(p%var(num_row))
      do i=1,num_row
        allocate( p%var(i)%dat(num_col(i)) )
      end do
    end if
  else
      allocate(p%var(num_row))
      do i=1,num_row
        allocate( p%var(i)%dat(num_col(i)) )
      end do
  end if
  
  sum_elem = 0
  do i=1,num_row
    do j=1,num_col(i)
      p%var(i)%dat(j) = array(sum_elem + j)
    end do
    sum_elem = sum_elem + num_col(i)
  end do
  
end subroutine set_data_var_i8length

!-----------------------------------
subroutine get_size_var_i8length(handle, var_size) bind(C, name='get_size_var_i8length')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(out) :: var_size
  type(var_i8length), pointer :: p
  
  call c_f_pointer(handle, p)
  if (allocated(p%var)) then
    var_size = size(p%var, kind=c_int)
  else
    var_size = 0_c_int
  end if
  
end subroutine get_size_var_i8length

!-----------------------------------
subroutine get_size_data_var_i8length(handle, var_size, dat_size) bind(C, name='get_size_data_var_i8length')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(in) :: var_size
  integer(c_int), intent(out) :: dat_size(*)
  type(var_i8length), pointer :: p
  integer(c_int)  :: i
  
  call c_f_pointer(handle, p)
  do i=1,var_size
    dat_size(i) = size(p%var(i)%dat, kind=c_int)
  end do
  
end subroutine get_size_data_var_i8length

!-----------------------------------
subroutine get_data_var_i8length(handle, array) bind(C, name='get_data_var_i8length')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_long), intent(out) :: array(*)
  type(var_i8length), pointer :: p
  integer(c_int)              :: i,j,size_var,size_dat,size_array,j2,loop_val
  integer(c_int)              :: start_index(1)
  
  call c_f_pointer(handle, p)
  
  size_array = 0
  if (allocated(p%var)) then
    size_var = size(p%var)
    do i=1,size_var
      size_dat = size(p%var(i)%dat)
      start_index = lbound(p%var(i)%dat)

      if (start_index(1) == 0) then
        loop_val = size_dat - 1
      else
        loop_val = size_dat
      endif


      j2=1
      do j=1,loop_val
        array(size_array+j) = p%var(i)%dat(j)
        j2=j2+1
      end do
      size_array = size_array + size_dat
    end do
    
  end if
  
end subroutine get_data_var_i8length

! **************************** var_dlength **************************

function new_handle_var_dlength() result(handle) bind(C, name='new_handle_var_dlength')
  
  type(c_ptr) :: handle
  type(var_dlength), pointer :: p
  
  allocate(p)    
  handle = c_loc(p)   
  
end function new_handle_var_dlength

!-----------------------------------
subroutine delete_handle_var_dlength(handle) bind(C, name='delete_handle_var_dlength')
  
  type(c_ptr), intent(in), value :: handle
  type(var_dlength), pointer :: p
  
  call c_f_pointer(handle, p)
  deallocate(p)
  
end subroutine delete_handle_var_dlength

!-----------------------------------
subroutine set_data_var_dlength(handle, array, num_row, num_col, num_elements) bind(C, name='set_data_var_dlength')
  
  type(c_ptr), intent(in), value    :: handle
  integer(c_int), intent(in), value :: num_row
  integer(c_int), intent(in), value :: num_elements
  integer(c_int), intent(in)        :: num_col(num_row) 
  real(c_double), intent(in)        :: array(num_elements)
  type(var_dlength), pointer :: p
  integer(c_int)  :: i,j,sum_elem
  
  
  call c_f_pointer(handle, p)    
  if (allocated(p%var)) then
    if (size(p%var) /= num_row) then
      deallocate(p%var)
      allocate(p%var(num_row))
      do i=1,num_row
        allocate( p%var(i)%dat(num_col(i)) )
      end do
    end if
  else
      allocate(p%var(num_row))
      do i=1,num_row
        allocate( p%var(i)%dat(num_col(i)) )
      end do
  end if
  
  sum_elem = 0
  do i=1,num_row
    do j=1,num_col(i)
      p%var(i)%dat(j) = array(sum_elem + j)
    end do
    sum_elem = sum_elem + num_col(i)
  end do
  
end subroutine set_data_var_dlength

!-----------------------------------
subroutine get_size_var_dlength(handle, var_size) bind(C, name='get_size_var_dlength')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(out)    :: var_size
  type(var_dlength), pointer     :: p
  
  call c_f_pointer(handle, p)
  if (allocated(p%var)) then
    var_size = size(p%var, kind=c_int)
  else
    var_size = 0_c_int
  end if
  
end subroutine get_size_var_dlength

subroutine get_size_var_mparStruct(handle, var_size) bind(C, name='get_size_var_mparStruct')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(out)    :: var_size
  type(hru_type), pointer     :: hru_data
  
  call c_f_pointer(handle, hru_data)
  if (allocated(hru_data%mparStruct%var)) then
    var_size = size(hru_data%mparStruct%var, kind=c_int)
  else
    var_size = 0_c_int
  end if
  
end subroutine get_size_var_mparStruct


!-----------------------------------
subroutine get_size_data_var_dlength(handle, var_size, dat_size) bind(C, name='get_size_data_var_dlength')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(in) :: var_size
  integer(c_int), intent(out) :: dat_size(*)
  type(var_dlength), pointer :: p
  integer(c_int)  :: i
  
  call c_f_pointer(handle, p)
  
  do i=1,var_size
      dat_size(i) = size(p%var(i)%dat, kind=c_int)
  end do
  
end subroutine get_size_data_var_dlength

!-----------------------------------
subroutine get_size_data_mparStruct(handle, var_size, dat_size) bind(C, name='get_size_data_mparStruct')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(in) :: var_size
  integer(c_int), intent(out) :: dat_size(*)
  type(hru_type), pointer :: hru_data
  integer(c_int)  :: i
  
  call c_f_pointer(handle, hru_data)
  
  do i=1,var_size
      dat_size(i) = size(hru_data%mparStruct%var(i)%dat, kind=c_int)
  end do
  
end subroutine get_size_data_mparStruct


!-----------------------------------
subroutine get_data_var_dlength(handle, array) bind(C, name='get_data_var_dlength')
  
  type(c_ptr), intent(in), value :: handle
  real(c_double), intent(out) :: array(*)
  type(var_dlength), pointer  :: p
  integer(c_int)              :: i,j,size_var,size_dat,size_array,j2,loop_val
  integer(c_int)              :: start_index(1)
  
  call c_f_pointer(handle, p)
  
  size_array = 0
  if (allocated(p%var)) then
    size_var = size(p%var)
    do i=1,size_var
      size_dat = size(p%var(i)%dat)
      start_index = lbound(p%var(i)%dat)

      if (start_index(1) == 0) then
        loop_val = size_dat - 1
      else
        loop_val = size_dat
      endif

      j2=1
      do j=start_index(1),loop_val
        array(size_array+j2) = p%var(i)%dat(j)
        j2=j2+1
      end do
      size_array = size_array + size_dat
    end do
    
  end if
  
end subroutine get_data_var_dlength

subroutine get_data_mparStruct(handle, array) bind(C, name='get_data_mparStruct')
  
  type(c_ptr), intent(in), value :: handle
  real(c_double), intent(out)    :: array(*)
  type(hru_type), pointer        :: hru_data
  integer(c_int)                 :: i,j,size_var,size_dat,size_array,j2,loop_val
  integer(c_int)                 :: start_index(1)
  
  call c_f_pointer(handle, hru_data)
  
  size_array = 0
  if (allocated(hru_data%mparStruct%var)) then
    size_var = size(hru_data%mparStruct%var)
    do i=1,size_var
      size_dat = size(hru_data%mparStruct%var(i)%dat)
      start_index = lbound(hru_data%mparStruct%var(i)%dat)

      if (start_index(1) == 0) then
        loop_val = size_dat - 1
      else
        loop_val = size_dat
      endif

      j2=1
      do j=start_index(1),loop_val
        array(size_array+j2) = hru_data%mparStruct%var(i)%dat(j)
        j2=j2+1
      end do
      size_array = size_array + size_dat
    end do
    
  end if
  
end subroutine get_data_mparStruct


! **************************** var_dlength **************************
! ************************ var_dlength_array ************************
function new_handle_dlength_array() result(handle) bind(C, name='new_handle_dlength_array')
  type(c_ptr) :: handle
  type(var_dlength_array), pointer :: p

  allocate(p)
  handle=c_loc(p)

end function new_handle_dlength_array
!--------------------------------
subroutine delete_handle_dlength_array(handle) bind(C, name='delete_handle_dlength_array')

  type(c_ptr), intent(in), value :: handle
  type(var_dlength_array), pointer :: p

  call c_f_pointer(handle, p)
  deallocate(p)

end subroutine
! ************************ var_dlength_array ************************
! ***************************** file_info ***************************
function new_handle_file_info() result(handle) bind(C, name='new_handle_file_info')
  type(c_ptr) :: handle
  type(file_info_array), pointer :: p

  allocate(p)
  handle = c_loc(p)

end function new_handle_file_info

!---------------------------------
subroutine delete_handle_file_info(handle) bind(C, name='delete_handle_file_info')

  type(c_ptr), intent(in), value :: handle
  type(file_info_array), pointer :: p

  call c_f_pointer(handle, p)
  deallocate(p)

end subroutine delete_handle_file_info
! ***************************** file_info ***************************
    

! ****************************** z_lookup ****************************
function new_handle_z_lookup() result(handle) bind(C, name="new_handle_z_lookup")
  type(c_ptr)            :: handle
  type(zLookup), pointer :: p

  allocate(p)
  handle = c_loc(p)
end function

subroutine delete_handle_z_lookup(handle) bind(C, name="delete_handle_z_lookup")
  type(c_ptr), intent(in), value :: handle
  type(zLookup), pointer :: p

  call c_f_pointer(handle, p)
  deallocate(p)
end subroutine 

! ****************************** hru type ****************************
function new_handle_hru_type() result(handle) bind(C, name="new_handle_hru_type")
  type(c_ptr)            :: handle
  type(hru_type), pointer :: p

  allocate(p)
  allocate(p%lookupStruct)
  allocate(p%forcStat)
  allocate(p%progStat)
  allocate(p%diagStat)
  allocate(p%fluxStat)
  allocate(p%indxStat)
  allocate(p%bvarStat)
  allocate(p%timeStruct)
  allocate(p%forcStruct)
  allocate(p%attrStruct)
  allocate(p%typeStruct)
  allocate(p%idStruct)
  allocate(p%indxStruct)
  allocate(p%mparStruct)
  allocate(p%progStruct)
  allocate(p%diagStruct)
  allocate(p%fluxStruct)
  allocate(p%bparStruct)
  allocate(p%bvarStruct)
  allocate(p%dparStruct)
  allocate(p%startTime_hru)
  allocate(p%finishTime_hru)
  allocate(p%refTime_hru)
  allocate(p%oldTime_hru)
  allocate(p%statCounter)
  allocate(p%outputTimeStep)
  allocate(p%resetStats)
  allocate(p%finalizeStats)
  handle = c_loc(p)
end function

subroutine delete_handle_hru_type(handle) bind(C, name="delete_handle_hru_type")
  type(c_ptr), intent(in), value :: handle
  type(hru_type), pointer :: p
